kubernetes/apps/k3s-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k3s-test
  namespace: lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k3s-test
  template:
    metadata:
      labels:
        app: k3s-test
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.11.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
