kubernetes/apps/k3s-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k3s-test
  namespace: lab
spec:
  selector:
    app: k3s-test
  ports:
    - name: http
      port: 80
      targetPort: 80
