kubernetes/apps/k3s-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3s-test
  namespace: lab
spec:
  ingressClassName: traefik
  rules:
    - host: k3s-test.guiosoft.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3s-test
                port:
                  number: 80
